classDiagram
    class EEBUS {
        +unique_ptr~external_energy_limitsIntf~ r_eebus_energy_sink
        +Conf config
        -thread m_eebus_grpc_api_thread
        -unique_ptr~EebusConnectionHandler~ m_connection_handler
        -EebusCallbacks m_callbacks
        -fd_event_handler m_event_handler
        -thread m_event_handler_thread
        +init()
        +ready()
    }

    class EebusConnectionHandler {
        -shared_ptr~ConfigValidator~ m_config
        -unique_ptr~lpc::LpcUseCaseHandler~ m_lpc_handler
        -unique_ptr~UseCaseEventReader~ m_event_reader
        -shared_ptr~control_service::ControlService::Stub~ m_control_service_stub
        -fd_event_handler m_handler
        -State m_state
        -timer_fd m_state_machine_timer
        -timer_fd m_reconnection_timer
        -EebusUseCase m_last_use_case
        -EebusCallbacks m_last_callbacks
        -bool m_use_case_added
        +sync()
        +get_poll_fd()
        +add_use_case()
        +done_adding_use_case()
        +stop()
        -initialize_connection()
        -configure_service()
        -create_channel_and_stub()
        -handle_event()
        -reconnect()
        -reset()
    }

    class LpcUseCaseHandler {
        -EebusCallbacks m_callbacks
        -shared_ptr~cs_lpc::ControllableSystemLPCControl::Stub~ m_stub
        -State m_state
        +start()
        +set_stub()
        +configure_use_case()
        +handle_event()
        +run_state_machine()
        +process_received_limit()
        -set_state()
        -apply_limit_for_current_state()
    }

    class UseCaseEventReader {
        -shared_ptr~control_service::ControlService::Stub~ m_stub
        -function m_event_callback
        +start()
        +stop()
        +OnReadDone()
        +OnDone()
    }

    class ConfigValidator {
        -Conf m_config
        +validate()
    }

    class Conf {
        // ... fields
    }

    EEBUS *-- EebusConnectionHandler
    EEBUS ..> Conf
    EebusConnectionHandler *-- LpcUseCaseHandler
    EebusConnectionHandler *-- UseCaseEventReader
    EebusConnectionHandler o-- ConfigValidator
    LpcUseCaseHandler ..> EebusCallbacks
    UseCaseEventReader ..> EebusConnectionHandler : event_callback
